--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <header>
         <div class="container">
             <span class="fa fa-bars menu-icon"></span>
-            <a class="header-logo" href="Jun_index.html">JUNICHIRO MATAGA</a>
+            <a class="header-logo" href="index.html">JUNICHIRO MATAGA</a>
           <span class="btn menu">MENU</span>
           <ul class="header-list">
-            <li><a href="Jun_index.html" class="list-btn">Top</a></li>
+            <li><a href="index.html" class="list-btn">Top</a></li>
             <li><a href="Jun_bio.html" class="list-btn">Bio</a></li>
             <li><a href="#" class="list-btn">Itinerary</a></li>
             <li><a href="#" class="list-btn">Discography</a></li>
