--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jun</title>
+    <title>Junichiro Mataga</title>
     <link rel="stylesheet" href="Jun_stylesheet.css">
     <link rel="stylesheet" href="responsiveJun.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
